--- a/stereopsis-ros/stereo_driver/CMakeLists.txt
+++ b/stereopsis-ros/stereo_driver/CMakeLists.txt
@@ -164,10 +164,10 @@ add_executable(stereo_splitter_node src/stereo_splitter_node.cpp)
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+#catkin_install_python(PROGRAMS
+#    scripts/image_saver_node.py
+#    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#)
 
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
