--- a/stereopsis_ros/CMakeLists.txt
+++ b/stereopsis_ros/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(stereo_driver)
+project(stereopsis_ros)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -138,7 +138,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/stereo_driver_node.cpp)
-add_executable(stereo_splitter_node src/stereo_splitter_node.cpp)
+#add_executable(stereo_splitter_node src/stereo_splitter_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -151,9 +151,9 @@ add_executable(stereo_splitter_node src/stereo_splitter_node.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(stereo_splitter_node
-   ${catkin_LIBRARIES}
-)
+# target_link_libraries(stereo_splitter_node
+#   ${catkin_LIBRARIES}
+#)
 
 #############
 ## Install ##
