--- a/stereopsis_ros/package.xml
+++ b/stereopsis_ros/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>stereo_driver</name>
+  <name>stereopsis_ros</name>
   <version>0.0.0</version>
-  <description>The stereo_driver package</description>
+  <description>The ROS drivers for stereopsis</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
